test/good/automatic/extension/mixed/without_input/ret_zero/0003.lat

int[] node(int node) {
   int[] a = new int[node];
   a[0] = 96;
   return a;
}

class node {
  int node;

  int node() {
     return node;
  }

  int test() {
    return self.node();
  }

  int[] test2() {
    return node(node);
  }
}

int main() {
  node node = new node;
  node.node = 12;
  node.node = node.node();
  printInt(node.node());
  int[] a = node(node.node);
  printInt(a[0]);
  printInt(a[1]);
  return 0;
}
