test/bad/automatic/extension/class/compile_time/0017.lat
class andrzej {
  int andrzej;
}

int main() {
  andrzej self = new andrzej;
  return self.andrzej;
}
